# code_multilabel_classification

./: .gitignore  README.md  main.py  pyproject.toml
cli/: README.md  illuin.bat  illuin.sh  main.py  pyproject.toml
config/: best_model_config.yaml  model_configs.yaml  sample_config.yaml  sample_model_config.yaml
data/: imputer.pkl  mlb.pkl  scaler.pkl
docs/: README.md  _results.md  _sidebar.md  data_analysis.md  index.html  limitations.md  metriques.md  modelisation.md  preprocessing.md  results.md  results_dl.md
models/: br_classifier.py  cc_classifier.py  dl_classifier.py
models/checkpoints/: br_logistic_code_weights.pkl  br_logistic_desc_code_input_output_notes_difficulty_weights.pkl  br_logistic_desc_code_input_output_notes_weights.pkl  br_logistic_desc_code_input_output_weights.pkl  br_logistic_desc_code_input_weights.pkl  br_logistic_desc_code_weights.pkl  br_logistic_desc_input_output_weights.pkl  cc_logistic_code_weights.pkl  cc_logistic_desc_code_input_output_notes_difficulty_weights.pkl  cc_logistic_desc_code_input_output_notes_weights.pkl  cc_logistic_desc_code_input_output_weights.pkl  cc_logistic_desc_code_input_weights.pkl  cc_logistic_desc_code_weights.pkl  cc_logistic_desc_input_output_weights.pkl  cc_logistic_desc_weights.pkl  dl_desc_code_input_500_weights.pkl  dl_desc_code_input_bce_weights.pkl  dl_desc_code_input_focal_weights.pkl  dl_desc_code_input_weights.pkl  (+1 more)
notebooks/: analysis.ipynb  preprocessing.ipynb
scripts/: combine_jsons.py  download_data.py  evaluate.py  predict.py  train.py
utils/: metrics.py  utils.py
