[project]
name = "tech-challenge-illuin-technology"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "gdown>=5.2.1",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "ruff>=0.15.4",
    "seaborn>=0.13.2",
    "tabulate>=0.10.0",
]

[tool.uv.workspace]
members = [
    "cli",
]
